k8s/whispr/prod/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: whispr-prod
spec:
  type: NodePort
  selector:
    app: auth-service
  ports:
    - name: http
      port: 3010
      targetPort: 3010
      nodePort: 30010
    - name: grpc
      port: 50010
      targetPort: 50010
